# cmake_test

./: CMakeLists.txt
app/hello/: CMakeLists.txt
app/hello/src/: hello.c
lib/: CMakeLists.txt
lib/calc/: CMakeLists.txt
lib/calc/inc/: calc.h
lib/calc/src/: calc.c
